optimize JVM memory